[package]
name = "papa"
version = "4.0.0" # managed by release.sh
edition = "2021"
license = "MIT"
description = "A cli mod manager for the Northstar launcher"
readme = "README.md"
authors = ["AnActualEmerald"]
repository = "https://github.com/AnActualEmerald/papa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libthermite = {path = "./thermite", version = "0.7.0-beta", features = ["steam"], default-features = false }
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["std", "derive"], default-features = false }
directories = "5.0.1"
regex = { version = "1.9.1", default-features = false, features = ["perf"]}
serde = { version = "1.0.174", default-features = false }
serde_json = { default-features = false, version = "1.0.103" }
toml = { default-features = false, version = "0.7.6" }
zip = { default-features = false, version = "0.6.6" }
tracing = { default-features = false, version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"], default-features = false }
owo-colors = "3.5.0"
figment = { version = "0.10.10", features = ["toml", "env"], default-features = false }
lazy_static = "1.4.0"
fuzzy-matcher = "0.3.7"
indicatif = { default-features = false, version = "0.17.5" }
ron = "0.8.0"
open = "5.0.0"
textwrap = { version = "0.16.0", default-features = false, features = ["terminal_size"] }
copy_dir = "0.1.3"
# rustyline = {version = "10.1.0", default_features = false}

[package.metadata.wix]
name = "papa"

[[package.metadata.generate-rpm.assets]]
source = "target/release/papa"
dest = "/usr/bin/papa"

[features]
default = ["northstar", "launcher"]
northstar = []
launcher = ["northstar"]
cluster = []
profiles = []

[profile.release]
# strip = true
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"

