[package]
name = "papa"
version = "4.1.0-rc.4" # managed by release.sh
edition = "2024"
license = "MIT"
description = "A cli mod manager for the Northstar launcher"
readme = "README.md"
authors = [
    "AnActualEmerald",
]
repository = "https://github.com/AnActualEmerald/papa"
include = [
    "src/**/*",
    "LICENSE",
    "README.md",
    "CHANGELOG.*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { default-features = false, version = "0.1.37" }
libthermite = { git = "https://github.com/anactualemerald/thermite", version = "0.9", features = [
    "steam",
], default-features = false }
anyhow = "1.0.72"
clap = { version = "4.3.19", features = [
    "std",
    "derive",
    "help",
    "color",
    "usage",
], default-features = false }
directories = "5.0.1"
regex = { version = "1", default-features = false, features = [
    "perf",
] }
serde = { version = "1.0.174", default-features = false }
serde_json = { default-features = false, version = "1.0.103" }
toml = { default-features = false, features = [
    "display",
], version = "0.8" }
zip = { default-features = false, version = "2.2.0" }
tracing-subscriber = { version = "0.3.17", features = [
    "ansi",
    "fmt",
    "env-filter",
], default-features = false }
owo-colors = "4.0"
figment = { version = "0.10.10", features = [
    "toml",
    "env",
], default-features = false }
fuzzy-matcher = "0.3.7"
indicatif = { default-features = false, version = "0.17.5" }
ron = "0.8.0"
open = "5.0.0"
textwrap = { version = "0.16.0", default-features = false, features = [
    "terminal_size",
] }
copy_dir = "0.1.3"
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
tracing-appender = "0.2.3"
clap_lex = "0.7.4"
which = "7.0.2"
steamlocate = { git = "https://github.com/WilliamVenner/steamlocate-rs", version = "2.0.1" }
# rustyline = {version = "10.1.0", default_features = false}

[package.metadata.wix]
name = "papa"

[[package.metadata.generate-rpm.assets]]
source = "target/release/papa"
dest = "/usr/bin/papa"

[features]
default = [
    "northstar",
    "launcher",
]
northstar = [
]
launcher = [
    "northstar",
]
cluster = [
]
profiles = [
]

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
