[package]
name = "libthermite"
version = "0.1.0"
edition = "2021"

[lib]
name = "thermite"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
futures-util = "0.3.24"
indicatif = "0.17.0"
log = "0.4.17"
regex = "1.5.6"
reqwest = { version = "0.11.11", features = ["stream"] }
ron = "0.7.1"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.33"
toml = "0.5.9"
zip = "0.6.2"
